--- a/src/main/resources/templates/student-list.html
+++ b/src/main/resources/templates/student-list.html
@@ -1,31 +1,74 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Students List</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="~{base :: head}"></head>
+
 <body>
 
-<h2>All Students</h2>
+<nav th:replace="~{base :: navbar}"></nav>
 
-<table border="1">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-    </tr>
-    </thead>
+<div class="container mt-4">
 
-    <tbody>
-    <tr th:each="stu : ${students}">
-        <td th:text="${stu.id}"></td>
-        <td th:text="${stu.name}"></td>
-        <td th:text="${stu.email}"></td>
-    </tr>
-    </tbody>
+    <div style="text-align: center; margin-bottom: 20px;">
+        <img src="/images/listphoto.jpg"
+             alt="Students"
+             style="width: 100%; height:200px; object-fit:cover; border-radius: 10px;">
 
-</table>
+
+    </div>
+
+        <h2 class="text-center mb-4">All Students</h2>
+
+        <table class="table table-striped table-bordered">
+            <thead class="table-primary">
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Phone</th>
+                <th>Gender</th>
+                <th>DOB</th>
+                <th>Course</th>
+                <th>Address</th>
+                <th>Enroll Date</th>
+                <th>Notes</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr th:each="stud : ${students}">
+                <td th:text="${stud.id}"></td>
+                <td th:text="${stud.name}"></td>
+                <td th:text="${stud.email}"></td>
+                <td th:text="${stud.phone}"></td>
+                <td th:text="${stud.gender}"></td>
+                <td th:text="${stud.dob}"></td>
+                <td th:text="${stud.course}"></td>
+                <td th:text="${stud.address}"></td>
+                <td th:text="${stud.enrollmentDate}"></td>
+                <td th:text="${stud.notes}"></td>
+
+                <td>
+                <a th:href="@{/students/edit/{id}(id=${stud.id})}">Edit</a> |
+                <a th:href="@{/students/delete/{id}(id=${stud.id})}">Delete</a> |
+                <a th:href="@{/expenses/add/{studentId}(studentId=${stud.id})}">Add Expense</a>
+                    <a th:href="@{/expenses/list/{studentId}(studentId=${stud.id})}">View Expenses</a>
+            </td>
+            </tr>
+            </tbody>
+
+        </table>
+
+    </div>
+</div>
 
 </body>
 </html>
+
+
+
+
+
+
+
