--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -13,20 +13,14 @@
         <img src="/images/students.png"
              style="width:900px; height:auto; display:block; margin:auto;">
         <div class="full-bottom-curve"><</div>
-        <div class="bubble-area">
-            <div class="bubble bubble-left"></div>
-            <div class="bubble bubble-right"></div>
-            <div class="bubble bubble-small"></div>
+        <div class="design-area">
+            <div class="purple-block"></div>
+            <div class="blue-block"></div>
         </div>
 
     </div>
 
-    <div style="text-align: center; margin-top: 20px;">
-        <a href="/students/list" class="btn btn-primary" style="margin-right: 10px;">Student List</a>
-        <a href="/students/add" class="btn btn-success">Add Student</a>
-    </div>
 
-</div>
 
 </body>
 </html>
