--- a/src/main/resources/templates/student-list.html
+++ b/src/main/resources/templates/student-list.html
@@ -9,7 +9,7 @@
 
 <div class="container mt-4">
 
-    <div style="text-align: center; margin-bottom: 20px;">
+    <div class="text-center mb-4">
         <img src="/images/listphoto.jpg"
              alt="Students"
              style="width: 100%; height:200px; object-fit:cover; border-radius: 10px;">
